<resources>
    <string name="app_name">LostPets</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- URL Api Publications -->
    <string name="publications_api">http://localhost:8000/publications</string>

    <!-- Login Fragment -->
    <string name="loginTextView">Entrá con tu cuenta</string>
    <string name="inputMail">Ingrese su mail</string>
    <string name="inputPassword">Ingrese su contraseña</string>
    <string name="botonAcceder">Acceder</string>
    <string name="botonGoogle">ACCEDER CON GOOGLE</string>
    <string name="botonFacebook">ACCEDER CON FACEBOOK</string>
    <string name="labelRegistro">No tienes una cuenta?</string>
    <string name="botonRegistrarse">REGISTRARSE</string>

    <!-- Registro Fragment -->
    <string name="registerTextView">Cree una cuenta</string>
    <string name="botonCrearCuenta">Crear Cuenta</string>
    <string name="labelCuenta">Ya tienes una cuenta?</string>
    <string name="botonVolverAcceder">ACCEDER</string>

    <!-- Facebook Login -->
    <string name="facebook_app_id">facebook_app_id</string>
    <string name="fb_login_protocol_scheme">fb_login_protocol_scheme</string>
    <string name="facebook_client_token">facebook_client_token</string>contactoTextView

    <!-- Ítem Publicación -->
    <string name="contactoTextView">Contacto:</string>
    <string name="distanceStart">A</string>
    <string name="distanceEnd">kilómetros</string>
    <string name="timeStart">Hace</string>
    <string name="timeYears">año/s</string>
    <string name="timeMonths">mes/es</string>
    <string name="timeDays">día/s</string>
    <string name="timeHours">hora/s</string>
    <string name="timeMinutes">minuto/s</string>
    <string name="timeSeconds">segundo/s</string>
    <string name="timeRecent">un instante</string>


    <!-- Intro Slider -->
    <string name="text_intro1">Bienvenido a LostPets</string>
    <string name="text_intro2">¿Perdiste a tu perro?</string>
    <string name="text_intro3">¿Encontraste a un gato?</string>
    <string name="desc_intro1">Una aplicación pensada para los animales</string>
    <string name="desc_intro2">Podes publicarlo para que los usuarios de tu zona puedan verlo!</string>
    <string name="desc_intro3">Podes publicarlo para ayudar al dueño a encontrarlo!</string>
    <string name="next">Siguiente</string>
    <string name="start">Comenzar!</string>
    <string name="skip">Saltar</string>

    <!-- Profile -->
    <string name="misPublicaciones">Aquí podrás ver tus publicaciones</string>

    <!-- Seleccion de ubicacion -->
    <string name="action_geolocate">Pick Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>


</resources>