<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegistrationFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:text="@string/registerTextView"
            android:textColor="@color/black"
            android:textSize="23dp" />

        <RelativeLayout
            android:layout_width="330dp"
            android:layout_height="227dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="125dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createAccountButtom"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="160dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:textColor="@color/black"
                android:text="@string/botonCrearCuenta" />

            <ImageView
                android:id="@+id/login_bgd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/login_rectangle" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:width="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/inputMail"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="@color/black"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="30dp"
                android:ems="10"
                android:hint="@string/inputPassword"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="@color/black"
                android:textSize="16dp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="183dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/labelCuenta"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButtom"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="35dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:drawablePadding="10dp"
                android:text="@string/botonVolverAcceder"
                android:textColor="@color/black" />
        </RelativeLayout>

    </RelativeLayout>
</FrameLayout>